Tue Sep 10 13:02:04 BST 2002  Olly Betts <olly@survex.com>

	* quartztest.cc: removed unused #include-s; describe valid options
	  in usage message.

Tue Sep 10 02:07:29 BST 2002  Olly Betts <olly@survex.com>

        * remote backend: implemented term_exists() and get_termfreq();
	  added test to check they work.

Mon Sep  9 12:59:15 BST 2002  Richard Boulton <richard@tartarus.org>

	* Add stub databases: if backend type is auto, and auto_dir points
	  to a file, read in settings from the file (overwriting the
	  existing ones), and then use them to open the database.
	  This allows, for example, omega to open a remote database by
	  putting in a stub database file in the omega directory.
	  Updated documentation for opening databases in userman.html.
	* apitest: Added test for stub databases.

Mon Sep 09 02:26:36 BST 2002  Olly Betts <olly@survex.com>

	* Documentation updates: move suggested books into intro_ir.html
	  and added URL for citeseer reference Richard posted to mailing
	  list recently; clarified wording in a couple of places.
	  
Sat Sep  7 12:52:12 2002  James Aylett  <tartarus@users.sourceforge.net>

	* docs: fixed references to OmDocumentContents (now OmDocument)
	  which had clearly been broken for a while. Also fixed get_data()
	  and set_data() example usage so it reflects reality (I hope).

Wed Sep 04 22:46:17 BST 2002  Olly Betts <olly@survex.com>

	* Corrected min_item.wt to min_wt in two assertions.

Thu Aug 15 11:42:20 BST 2002  Richard Boulton <richard@tartarus.org>

	* buildall: Only add the directory derived from xapian-config
	  to ACLOCAL_FLAGS if it actually exists.

Mon Aug 12 01:13:55 BST 2002  Richard Boulton <richard@tartarus.org>

	* quartz_table.cc: Check that a key exists before calling
	  Btree::del() - there seems to be a bug in the btree code
	  causing a failure when deleting keys if they don't exist.
	  This work around appears to make things work correctly, but
	  won't be terribly efficient.
